# rust-bandnorm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
examples/: benchmark_vs_R.ipynb  tutorial_quickstart.ipynb
python/bandnorm_rs/: __init__.py
python/bandnorm_rust/: __init__.py
rust/: Cargo.toml
rust/src/: lib.rs
tests/: reference_scgad.R  test_parity.py
tests/data/: batch.tsv  cell_type.tsv  scgad_input_genes.tsv
